<resources>
    <string name="new_energy_school">New Energy School</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Sales">Sales</string>
    <string name="Contacts">Контакты</string>
    <string name="AboutUs">Про нас</string>
    <string name="Other">Г л а в н а я</string>
    <string name="HeadNameNew">New</string>
    <string name="FiltersCD">FiltersCD</string>
    <string name="CategoryCD">CategoryCD</string>
    <string name="HeadNameEnergy">Energy</string>
    <string name="CategoryTitle">Услуги</string>
    <string name="SchoolServicesTitle">Услуги</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Course_name">Мини-Сад</string>
    <string name="Course_review">Описание</string>
    <string name="About">О занятиях:</string>
    <string name="Course_Write">Записаться</string>
    <string name="Course_Age">Возраст:</string>
    <string name="direction_rev_min">   New Energy предлагает для деток от 2 до 6 лет 4-х часовую полудневку (Мини-сад) которая не только принесет пользу для Вашего ребенка, но и позволит каждой Маме заняться собой и своими делами.
 \n\nДошкольный возраст – это возраст становления, имеющий свои особенности и потребности. Именно от этих потребностей зависит дальнейшего психическое, эмоциональное и интеллектуальное развитие.
 \n\nВ нашем центре ежедневно по 4 часа Ваш малыш будет в компании сверстников изучать английский, заниматься творчеством и развитием. Логика, мышление, моторика, буквы, цифры, лепка, аппликации, творческие поделки.
 \n\nБлагодаря комплексному подходу специалистов Нашего центра Ваш ребенок получит крепкий фундамент знаний и навыки коммуникации, что необходимо для дальнейшего развития.
 \n\nВместе с New Energy - в успешное будущее!</string>

    <string name="direction_rev_draw">New Energy предлагает уникальную возможность познакомится с различными материалами и техниками рисунка и живописи (масло, акрил, гуашь, акварель, пастель, уголь, сепия, карандаши и т. д.) по авторской методике обучения Аллы Шляховой.
\n\nОбучение проводит всемирно известный художник, преподаватель, искусствовед и меценат Алла Шляхова, а также ее молодая и очень талантливая ученица Екатерина Маркевич.
\n\nNew Energy предлагает обучение для детей и взрослых (от 12 лет и старше). Количество учеников ограничено 8 учащимися для качественного уровня обучения согласно авторской методике.</string>

    <string name="direction_rev_earlyDev">На уроках раннего развития Ваш малыш окунается в неизведанный мир волшебства и загадок, открытий и познаний. С New Energy Ваш ребенок в группе сверстников начнет достигать первых успехов на пути к знаниям, раскроет свои таланты и способности.
\n\nВ возрасте 1-3 лет детки уже понимают что им говорят взрослые и учатся говорить самостоятельно, начинают выполнять множество новых задач. Самое главное в этом возрасте - первая самостоятельность, когда мама нужна только для того, чтобы подсказать или помочь.
\n\nМалыши на втором году жизни стремятся выполнять задачи своими собственными руками или ногами. Наша же задача состоит в том, чтобы дать детям уверенность в собственных силах и научить их тому, как познавать мир.
\n\nВыполнение множества различных задач на логику, сенсорику и моторику, а также на развитие памяти и внимания открывают малышу новые возможности для изучения окружающего мира. Чем больше ребенку удается, тем больше нового он будет стремиться узнать, а это является залогом развития интеллекта.
\n\nВ New Energy яркие и интересные развивающие занятия. Мы изучаем буквы и цифры в игровой форме, познаём окружающий мир, развиваем мелкую моторику. На наших занятиях - лепка, аппликации, рисование, развитие речи, логики, памяти, мышления.
\n\nВместе с New Energy - в успешное будущее!</string>

    <string name="direction_school">Подготовка к школе в «New Energy», это весело, забавно, а самое главное продуктивно.
В период с 3 до 7 лет (дошкольный возраст) ребенок постепенно отсоединяется от взрослого, начинается этап взросления ребенка.
Наиболее благоприятными для начала целенаправленной подготовки к школе специалисты считают возраст от 4 до 6 лет.
\n\nВ этот период времени детки все чаще повторяют действия своих родителей, таким образом показывая, что они уже тоже взрослые. Ребенок уже способен намерено запоминать информацию для дальнейшего использования.
\n\nПроисходит развитие всех психических процессов, таких как: речь, память, внимание, восприятие, воображение, мышление, представление, ощущение.
\n\nВоспитатели и преподаватели в «New Energy» уделяют особое внимание психическому развитию ребенка, так как в этот период жизни начинают формироваться новые психологические механизмы деятельности и поведения.
\n\nКаждое занятие построено так, что Вашим деткам некогда скучать. Происходит постоянная смена деятельности, от которой ребенок не устает. На занятиях не приходится постоянно сидеть за партой.
\n\nМы используем только лучшее из существующих методики воспитания и обучения, самые современные дидактические материалы.
При этом программа нашей подготовки тесно связана с «Новой Украинской Школой», с которой детки встретятся уже очень скоро за школьными партами.
Набор осуществляется в одну из двух групп: «Два года до школы», «Один год до школы».
\n\nВместе с New Energy - в успешное будущее!</string>

    <string name="direction_english">«Возможно ли научить деток младшего дошкольного и дошкольного возрастов иностранному языку?»: – интересуются многие родители.
Бесспорно, да! Ведь детки, как маленькие грибочки, способны поглощать и запоминать огромнейшее количество информации.Английский язык для детей – это нечто неизведанное и непременно увлекательное.
\n\nКак мы все знаем, любимое занятие детишек – это игры! Именно по-этому большая часть занятий по английскому языку проводятся в игровой форме, где у каждого малыша есть возможность использовать все свои навыки и умения, не бояться проговаривать слова на незнакомом ему английском языке.
\n\nНаши воспитатели и преподаватели используют множество проверенных годами, а также современных методик, чтобы маленьким ученикам не было скучно изучать и познавать новый для них английский язык.
\n\nПри разработке программы изучения английского языка обязательно учитываются возрастные критерии, так как ребенку легче изучать что-то новое со своими сверстниками. Он чувствует себя уверенно, находясь в такой обстановке.
\n\nТак же не мало важно, правильно подобранные дидактические материалы: учебники, раздаточный материал, аудио и видео материал. Все это нужно для того, чтобы одновременно развивать все языковые навыки: говорить, читать, слушать, писать.
\n\nБлагодаря таким не сложным условиям нам удается вызвать у ребенка интерес и стремление к изучению иностранных языков, что несомненно будет особо полезно для дальнего обучения.
\n\nВместе с New Energy - в успешное будущее!</string>
    <string name="about_our_school">На протяжении долгого времени мы радуем детей и родителей нашим семейным центром, который смело можно назвать вторым домом. Наш центр – это место, где с помощью современных технологий и передовых методик всесторонне развивают ребенка.
\n\nВ основе принципов нашего центра лежат высокие стандарты обучения, воспитания и физического благополучия ребенка. Мы всеми силами создаем атмосферу уютного и безопасного места, которое напоминает дом.</string>
    <string name="contacts">Адресс:
\n\nгород Одесса
\n\nТелефон:
\n\n+38 (097) 007-09-27</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="phone_number_text">093 123 45 67</string>
    <string name="newenergylogo">newEnergyLogo</string>
    <string name="download_to_gallery">З а г р у з и т ь г а л е р е ю</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="game_button">Игра</string>
    <string name="add_button">Добавить</string>
    <string name="add_new_client_button">Добавить нового клиента</string>
    <string name="client_calendar_button">График клиента</string>
    <string name="logo_activity_add_new_client">logo_activity_add_new_client</string>


</resources>