<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_page_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:transitionName="dirInform">


    <androidx.cardview.widget.CardView

        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardPreventCornerOverlap="true"
        app:contentPaddingBottom="20dp"
        app:layoutDescription="@xml/direction_item_coursec_xml_cardview_scene"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/category_courses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/cardView"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="324dp"
            tools:layout_conversion_absoluteWidth="245dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">


            <ImageView
                android:id="@+id/category_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/SchoolServicesTitle"
                android:transitionName="directionImage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/cardView"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_direction" />


            <TextView
                android:id="@+id/direction_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/rotonda_bold"
                android:text="@string/Course_Age"
                android:textColor="#00BCD4"
                android:textSize="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonRev"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp"
                    android:background="@drawable/bg_button_rounded"
                    android:fontFamily="@font/rotonda_bold"
                    android:text="@string/Course_review"
                    android:textColor="@color/mainBg"
                    android:textSize="16sp"
                    app:backgroundTint="#00BCD4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonWrite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp"
                    android:background="@drawable/bg_button_rounded"
                    android:fontFamily="@font/rotonda_bold"
                    android:text="@string/Course_Write"
                    android:textColor="@color/mainBg"
                    android:textSize="16sp"
                    app:backgroundTint="#00BCD4" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/direction_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="72dp"
            android:contentDescription="@string/SchoolServicesTitle"
            android:fontFamily="@font/rotonda_bold"
            android:text="@string/Course_name"
            android:textColor="#FFFFFFFF"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/direction_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="50dp"
            android:transitionName="directionLog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_direction_logo" />


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>