<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/mainBg"
    tools:context="app.ativity.LoginActivity">

    <EditText
        android:id="@+id/user_phone_number"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:hint="@string/phone_number_text"
        android:text=""
        android:textColorHint="#656363"
        android:textColor="#757373"
        android:inputType="phone"
        android:textSize="16sp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/registration_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textSize="16sp"
        android:textColor="#757373"
        android:textColorHint="#656363"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_phone_number" />

    <Button
        android:id="@+id/registration_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_button_rounded"
        android:fontFamily="@font/rotonda_bold"
        android:text="Регистрация"
        android:onClick="registrationPage"
        android:textColor="@color/mainBg"
        android:textSize="16sp"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_button_rounded"
        android:fontFamily="@font/rotonda_bold"
        android:text="Авторизация"
        android:layout_marginBottom="10dp"
        android:textColor="@color/mainBg"
        android:textSize="16sp"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toTopOf="@+id/registration_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="307dp"
        android:layout_height="123dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/svg" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/rotondac_thin"
        android:gravity="center"
        android:text="Введите номер телефона\nи пароль"
        android:textColor="#3EC0DE"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/user_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>